# kahan_error_analysis_lib_hao_0

./: CMakeLists.txt  Makefile  README
inc/: CMakeLists.txt  error_analysis.h  kahan.h  thread_error_analysis.h
src/: CMakeLists.txt  error_analysis.cpp  kahan.cpp  thread_error_analysis.cpp
test/: CMakeLists.txt  error_analysis_test.cpp  kahan_test.cpp  test_all.cpp  thread_error_analysis_test.cpp
